remove sun.* imports