@@ -1,6 +1,5 @@
 package com.xqbase.util.servlet;
 
-import java.io.IOException;
 import java.security.GeneralSecurityException;
 import java.security.cert.Certificate;
 import java.security.cert.CertificateFactory;
@@ -13,8 +12,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletRequestWrapper;
 import javax.servlet.http.HttpServletResponse;
 
-import sun.misc.BASE64Decoder;
-
+import com.xqbase.util.Base64;
 import com.xqbase.util.ByteArrayQueue;
 
 public class ForwardedWrapper implements WrapperFactory {
@@ -49,11 +47,7 @@ public class ForwardedWrapper implements WrapperFactory {
 		String pkcs7 = req.getHeader("X-Pkcs7-Certificates-Base64");
 		if (pkcs7 != null) {
 			ByteArrayQueue baq = new ByteArrayQueue();
-			try {
-				baq.add(new BASE64Decoder().decodeBuffer(pkcs7));
-			} catch (IOException e) {
-				throw new RuntimeException(e);
-			}
+			baq.add(Base64.decode(pkcs7));
 			try {
 				Collection<? extends Certificate> certs = CertificateFactory.
 						getInstance("X509").generateCertificates(baq.getInputStream());
